force-app/main/default/objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <description>Staff members of the college hostel management system.</description>
    <label>Staff</label>
    <nameField>
        <displayFormat>STF-{0000}</displayFormat>
        <label>Staff ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>