force-app/main/default/objects/Staff__c/fields/Availability_status__c.field-meta.xml
<CustomField>
    <fullName>Availability_status__c</fullName>
    <label>Availability status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Duty</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>Rest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>