force-app/main/default/objects/Staff__c/fields/Bus__c.field-meta.xml
<CustomField>
    <fullName>Bus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bus</label>
    <referenceTo>Bus__c</referenceTo>
    <relationshipLabel>Buses</relationshipLabel>
    <relationshipName>Buses</relationshipName>
    <type>Lookup</type>
</CustomField>