force-app/main/default/objects/Staff__c/fields/experience__c.field-meta.xml
<CustomField>
    <fullName>experience__c</fullName>
    <label>experience</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>