force-app/main/default/objects/Staff__c/fields/Leave_Count__c.field-meta.xml
<CustomField>
    <fullName>Leave_Count__c</fullName>
    <formula>Leave_End_Date__c  -  Leave_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>