force-app/main/default/objects/Staff__c/fields/Licensenum__c.field-meta.xml
<CustomField>
    <fullName>Licensenum__c</fullName>
    <label>Licensenum</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>