force-app/main/default/objects/Staff__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warden</fullName>
            </value>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Mess Manager</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>