force-app/main/default/objects/Staff__c/validationRules/Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c  &lt;= 18</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Age must be greater than 18.</errorMessage>
</ValidationRule>