force-app/main/default/objects/Staff__c/validationRules/Contact_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(Contact_Number__c),
    NOT(REGEX(Contact_Number__c, &quot;[0-9]{10}&quot;))
)</errorConditionFormula>
    <errorDisplayField>Contact_Number__c</errorDisplayField>
    <errorMessage>Contact Number must contain exactly 10 digits.</errorMessage>
</ValidationRule>