force-app/main/default/objects/Staff__c/validationRules/Leave_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Leave_End_Date__c &lt; Leave_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Leave_End_Date__c</errorDisplayField>
    <errorMessage>End Date must be greater than or equal to Start Date.</errorMessage>
</ValidationRule>